fixed alignment on index.html

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -32,6 +32,7 @@ a {
     font-weight: bold;
     display: inline-block;
     right: 20px;
+    margin-right: 1rem;
 }
 
 #myCart {
@@ -147,5 +148,3 @@ a {
     height: 50px;
     width: 50px;
 }
-
-
